hero section fixed spacing

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -31,6 +31,7 @@ header {
   align-items: center;
   justify-content: space-between;
   padding: 2.25rem 4rem;
+  padding-bottom: 0rem;
 }
 
 .navigation,
@@ -68,3 +69,19 @@ header button {
 /*///////////////////////////
 ////////HERO//////////////
 //////////////////////////*/
+
+.hero {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 8rem 0rem;
+}
+
+.hero h1 {
+  text-align: center;
+  font-size: 3rem;
+  font-weight: 600;
+}
+.hero h1 span {
+  color: var(--accent-color);
+}
